v3.8.0 (XXXX-XX-XX)
-------------------

* Fix BTS-350, BTS-358: Fixed potential startup errors due to global replication
  applier being started before end of database recovery procedure.
  Also fixed potential shutdown errors due to global replication applier being
  shut down in parallel to a concurrent shut down attempt.

* Fix BTS-357: Fix processing of analyzer with return type by TOKENS function.

* Fix BTS-346: Improved handling of AQL query kill command in unlikely places,
  before the query starts to execute and after the query is done but the result
  is still being written. Now the cleanup of queries works more reliably. This
  unreliable kill time windows were very short and unlikely to hit, although if
  one was hit transactions were not aborted, and collection locks could be
  lingering until query timeout.

* Updated ArangoDB Starter to 0.15.0.

* Fix BTS-357: Fix processing of analyzer with return type by TOKENS function.

* Added error handling for figures command in cluster. Previously errors
  returned by shards were ignored when aggregating the individual responses.

* Remove CMake control variable `UNCONDITIONALLY_BUILD_LOG_MESSAGES`.

* Fix undefined behavior in dynarray constructor when running into 
  an out-of-memory exception during construction. In arangod, this can only
  happen during metrics objects construction at program start.

* Added option `--headers-file` to arangoimport, to optionally read CSV/TSV
  headers from a separate file.

* Fixed issue BTS-353: memleak when running into an out-of-memory situation
  while repurposing an existing AqlItemBlock.

* Change metrics' internal `low()` and `high()` methods so that they  return by
  value, not by reference.

* Fix logging of urls when using `--log.level requests=debug`. There was an
  issue since v3.7.7 with the wrong URL being logged in request logging if
  multiple requests were sent over the same connection. In this case, the